--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="porta.css">
-  <link rel="icon" href="/imagenes/icono.png" type="imagenes/x-png">
+  <link rel="icon" href="imagenes/icono.png" type="imagenes/x-png">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <title>Cheft | Portafolio</title>
 </head>
@@ -64,4 +64,5 @@
 
   <footer></footer>
 </body>
+
 </html>
