--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="porta.css">
-  <link rel="icon" href="imagenes/icono.png" type="imagenes/x-png">
+  <link rel="icon" href="icono.png" type="imagenes/x-png">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <title>Cheft | Portafolio</title>
 </head>
@@ -16,7 +16,7 @@
       <input type="checkbox" id="barra--item1" class="barra-check">
       <label class="material-symbols-outlined barra--item" id="barra--label" for="barra--item1">menu</label>
       <div class="barra--img_container">
-        <img src="/imagenes/estu.jpg" alt="estudio de nixbox" class="barra--img">
+        <img src="estu.jpg" alt="estudio de nixbox" class="barra--img">
       </div>
     <nav class="barra--nav">
       <label class="material-symbols-outlined close-menu" for="barra--item1">close</label>
@@ -42,7 +42,7 @@
   <main class="centro">
     <div class="centro-item">
       <span class="centro--container-img">
-        <img src="/imagenes/icono.png" alt="perfil de dc icono" class="centro-img">
+        <img src="icono.png" alt="perfil de dc icono" class="centro-img">
       </span>
       <div class="centro-item centro--item2">
       <h1>¿COMO EMPEZE?</h1>
@@ -66,3 +66,4 @@
 </body>
 
 </html>
+
