--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="porta.css">
-  <link rel="icon" href="/imagenes/icono.png" type="imagenes/x-png">
+  <link rel="icon" href="icono.png" type="imagenes/x-png">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <title>Cheft | Portafolio</title>
 </head>
@@ -14,7 +14,7 @@
   <header class="barra_busqueda" id="barra_busqueda">
     <input type="checkbox" class="check" id="check">
     <label for="check" class="material-symbols-outlined barra-label" id="barra-label" role="button">menu</label>
-    <img src="/imagenes/estu.jpg" alt="imagen de mi estudio" class="barra-img">
+    <img src="estu.jpg" alt="imagen de mi estudio" class="barra-img">
     <nav class="barra-nav" id="barra-nav">
       <label for="check" class="material-symbols-outlined barra_cerrar" id="barra_cerrar">close</label>
       <ul class="barra-list">
@@ -39,7 +39,7 @@
   <main class="centro">
     <div class="centro-item">
       <span class="centro--container-img">
-        <img src="/imagenes/icono.png" alt="perfil de dc icono" class="centro-img">
+        <img src="icono.png" alt="perfil de dc icono" class="centro-img">
       </span>
       <div class="centro-item centro--item2">
       <h1 class="princi">¿COMO EMPEZE?</h1>
@@ -73,4 +73,5 @@
 <!--  <source src="mani.mp3" type="audio/mpeg">-->
 <!--</audio>-->
 <script src="port.js"></script>
+
 </html>
